# hermes-custodian-plugin

./: .gitignore  README.md  __init__.py  plugin.yaml  pyproject.toml
dashboard/: manifest.json  plugin_api.py
hermes_custodian_plugin/: __init__.py  classifier.py  cron_health.py  cron_registrar.py  fix_engine.py  journal.py  scanner.py  schemas.py
tests/: test_custodian_plugin.py
