[project]
name = "hermes-custodian-plugin"
version = "2.0.0"
description = "Operational monitoring, auto-repair, and escalation for Hermes"
authors = [{name = "Indigo Karasu", email = "mx.indigo.karasu@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.entry-points."hermes_agent.plugins"]
custodian = "hermes_custodian_plugin"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["hermes_custodian_plugin*"]
